# iucode-tool

./: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  intel_microcode.c  intel_microcode.h  iucode_tool.8.in  iucode_tool.c  iucode_tool_config.h.in
debian/: changelog  control  links  rules  watch
debian/upstream/: signing-key.asc
